kubernetes/apps/default/hajimari/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hajimari
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`hajimari.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: hajimari
          port: 3000
      middlewares:
        #- name: networking-traefik-middleware-chains-default@kubernetescrd
        #- name: networking-traefik-middleware-chains-forward-auth@kubernetescrd
        - name: networking-traefik-forward-auth@kubernetescrd
          namespace: networking
  tls:
    secretName: "hajimari-${SECRET_DOMAIN/./-}-tls"
